@@ -510,5 +510,10 @@ Changes since version 1.5-9
 	  there are used in model estimation (due to NA values); avoid calc. of RE model a second time;
 	  phtest now also works with between model correctly (fixed degrees of freedom)
 	  tests/test_phtest_Hausman_regression.R added
+	  
+	* plm(): original row names of inputted data are preserved in plm_object$model,
+	  so functions like pmodel.response(), model.frame(), model.matrix(), residuals()
+	  return the original row.names (and thus fancy rownames if those were to be computed by pdata.frame);
+	  as.data.frame.pdata.frame(): respects row.names argument
 
 
